tests/baselines/reference/optionalChainingInParameterBindingPattern.2(strict=true,target=esnext).errors.txt
optionalChainingInParameterBindingPattern.2.ts(3,5): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
optionalChainingInParameterBindingPattern.2.ts(3,6): error TS2537: Type 'undefined' has no matching index signature for type 'string'.
optionalChainingInParameterBindingPattern.2.ts(3,6): error TS2538: Type 'undefined' cannot be used as an index type.
optionalChainingInParameterBindingPattern.2.ts(6,5): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
optionalChainingInParameterBindingPattern.2.ts(6,6): error TS2537: Type 'undefined' has no matching index signature for type 'string'.
optionalChainingInParameterBindingPattern.2.ts(6,6): error TS2538: Type 'undefined' cannot be used as an index type.


==== optionalChainingInParameterBindingPattern.2.ts (6 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): { d: string } | undefined => undefined;
    (({ [a()?.d]: c = "" }) => { var a; })();
        ~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
         ~~~~~~
!!! error TS2537: Type 'undefined' has no matching index signature for type 'string'.
         ~~~~~~
!!! error TS2538: Type 'undefined' cannot be used as an index type.
    
    const x = "";
    (({ [a()?.d]: c }, d = x) => { var x; })();
        ~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
         ~~~~~~
!!! error TS2537: Type 'undefined' has no matching index signature for type 'string'.
         ~~~~~~
!!! error TS2538: Type 'undefined' cannot be used as an index type.